reset tmpl file

--- a/config.tmpl
+++ b/config.tmpl
@@ -35,6 +35,6 @@ callsigns = MYCALL
 txgroup = dl-all
 
 [discord]
-enabled = True
-wh_url = https://discord.com/api/webhooks/1367695373530960012/v_jT_ArZSgvcBgeMXB3KUrX1cDhI5_LWUSp8ZHvIfw0hawi9kgbbD889r4Cj_Z8P9s53
-thread_map = 1367695241498329098:1367700030357770270
+enabled = False
+wh_url = https://discord.com/api/webhooks/1234567890/abcdefghijklm
+thread_map = 123456:12345678901234567890
